# test-sonarcloud

./: .gitignore  README.md  my_pandas_lint.py  pylint-report.txt  pyproject.toml  sonar-project.properties
.github/workflows/: sonarcloud-external-pylint.yaml
mock_package/: __init__.py  module1.py  pd_funx.py
mock_package/subpackage/: __init__.py  code11.py  module1_1.py  module1_2.py
pylint_plugins/duplicated_imports_plugin/: __init__.py  duplicated_imports_checker.py
