[tool.poetry]
name = "test-sonarcloud"
version = "0.1.1"
description = "test sonar cloud wflow"
authors = ["Gianfrancesco Angelini <gian.angelini@hotmail.com>"]
maintainers = ["Gianfrancesco Angelini <gian.angelini@hotmail.com>"]
readme = "./README.md"
packages = [
    { include = "mock_package" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pylint = "^2.17.0"


[tool.pylint."MESSAGES CONTROL"]
# Checkers
# ref: https://pylint.readthedocs.io/en/latest/user_guide/configuration/all-options.html#main-checker


# ignore pylint errors for particular variable names
# ref: https://pylint.readthedocs.io/en/latest/user_guide/configuration/all-options.html#good-names
good-names = [ 
    "x",
    "y",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
