[tool.poetry]
name = "test-sonarcloud"
version = "0.1.1"
description = "test sonar cloud wflow"
authors = ["Gianfrancesco Angelini <gian.angelini@hotmail.com>"]
maintainers = ["Gianfrancesco Angelini <gian.angelini@hotmail.com>"]
readme = "./README.md"
packages = [
    { include = "mock_package" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pylint = "^2.17.0"
pandas = "^1.5.3"


[tool.pylint."MESSAGES CONTROL"]
# Checkers
# ref: https://pylint.readthedocs.io/en/latest/user_guide/configuration/all-options.html#main-checker


# ignore pylint errors for particular variable names
# ref: https://pylint.readthedocs.io/en/latest/user_guide/configuration/all-options.html#good-names
good-names = [ 
    "x",
    "y",
]

# [tool.pylint]
# load-plugins = "my_pandas_lint"

[tool.pylint.pylintrc]
disable = "missing-docstring, invalid-name"

[tool.pylint.message-control]
# disable all the messages by default
enable = [
    "C",
    "E",
    "F",
    "I",
    "R",
    "W",
]

[tool.pylint.report]
output-format = "colorized"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
